kubernetes/core/kyverno/app/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: kyverno
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
# admission-controller: receives webhook calls from kube-apiserver (9443),
# and calls kube-apiserver for certificate/config management (443/6443)
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: admission-controller
  namespace: kyverno
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/part-of: kyverno
      app.kubernetes.io/instance: kyverno
      app.kubernetes.io/component: admission-controller
  ingress:
    - fromEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "9443"
              protocol: TCP
    # Allow monitoring scrapes
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: prometheus
            k8s:app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
---
# background-controller: watches resources and generates/mutates via kube-apiserver only
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: background-controller
  namespace: kyverno
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/part-of: kyverno
      app.kubernetes.io/instance: kyverno
      app.kubernetes.io/component: background-controller
  ingress:
    # Allow monitoring scrapes
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: prometheus
            k8s:app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
---
# cleanup-controller: receives webhook calls for cleanup policies (9443),
# and calls kube-apiserver (443/6443)
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cleanup-controller
  namespace: kyverno
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/part-of: kyverno
      app.kubernetes.io/instance: kyverno
      app.kubernetes.io/component: cleanup-controller
  ingress:
    - fromEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "9443"
              protocol: TCP
    # Allow monitoring scrapes
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: prometheus
            k8s:app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
---
# reports-controller: watches resources and writes reports via kube-apiserver only
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: reports-controller
  namespace: kyverno
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/part-of: kyverno
      app.kubernetes.io/instance: kyverno
      app.kubernetes.io/component: reports-controller
  ingress:
    # Allow monitoring scrapes
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: prometheus
            k8s:app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
---
# pre-delete hooks: scale controllers to zero and remove webhook configurations
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: webhooks-cleanup
  namespace: kyverno
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/part-of: kyverno
      app.kubernetes.io/instance: kyverno
      app.kubernetes.io/component: webhooks-cleanup
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
---
# post-upgrade migration job: migrates Kyverno CRDs between versions
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: crds-migration
  namespace: kyverno
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/part-of: kyverno
      app.kubernetes.io/instance: kyverno
      app.kubernetes.io/component: crds-migration
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
